Salesforce Project/force-app/main/default/objects/Quality_Test__c/Quality_Test__c.object-meta.xml
<CustomObject>
    <description>to check the quality of the milk.</description>
    <label>Quality Test</label>
    <nameField>
        <label>Quality Test Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quality Tests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>