Salesforce Project/force-app/main/default/objects/Quality_Test__c/fields/Contaminants__c.field-meta.xml
<CustomField>
    <fullName>Contaminants__c</fullName>
    <label>Contaminants</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Antibiotics</fullName>
            </value>
            <value>
                <fullName>Bacteria</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>