Salesforce Project/force-app/main/default/objects/Quality_Test__c/fields/Milk_Production__c.field-meta.xml
<CustomField>
    <fullName>Milk_Production__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Milk Production</label>
    <referenceTo>Milk_Production__c</referenceTo>
    <relationshipLabel>Quality Tests</relationshipLabel>
    <relationshipName>Quality_Tests</relationshipName>
    <type>Lookup</type>
</CustomField>