Salesforce Project/force-app/main/default/objects/Quality_Test__c/fields/Test_Date__c.field-meta.xml
<CustomField>
    <fullName>Test_Date__c</fullName>
    <description>Date of testing milk or dairy product.</description>
    <inlineHelpText>Date of testing milk or dairy product.</inlineHelpText>
    <label>Test Date</label>
    <type>Date</type>
</CustomField>