Salesforce Project/force-app/main/default/objects/Quality_Test__c/fields/Tester__c.field-meta.xml
<CustomField>
    <fullName>Tester__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Person who performed the quality test.</description>
    <inlineHelpText>Person who performed the quality test.</inlineHelpText>
    <label>Tester</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quality_Tests</relationshipName>
    <type>Lookup</type>
</CustomField>