Salesforce Project/force-app/main/default/objects/Quality_Test__c/validationRules/Fat_Content.validationRule-meta.xml
<ValidationRule>
    <fullName>Fat_Content</fullName>
    <active>true</active>
    <errorConditionFormula>OR(ISBLANK( Fat_Content__c ), ISBLANK( Text(Contaminants__c )))</errorConditionFormula>
    <errorDisplayField>Fat_Content__c</errorDisplayField>
    <errorMessage>Both Fat % and Contaminants must be recorded.</errorMessage>
</ValidationRule>