Salesforce Project/force-app/main/default/objects/Quality_Test__c/validationRules/Test_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Test_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Test_Date__c &lt; TODAY()</errorConditionFormula>
    <errorDisplayField>Test_Date__c</errorDisplayField>
    <errorMessage>Test Date cannot be in the future.</errorMessage>
</ValidationRule>